--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   chewie: ^1.3.0
   on_audio_query: ^2.6.0
   provider: ^6.0.2
+  assets_audio_player: ^3.0.4+1
 
 dev_dependencies:
   flutter_test:
